Se cambia index

--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 <html ng-app="mooniart.ubikt">
 	<head>
 		<meta charset="UTF-8">
-		<script src="js/jquery.js"></script>
-		<script src="js/jquery.validate.js"></script>
-		<script src="js/angular.min.js"></script>
-		<script src="js/angular-cookies.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script src="js/app/app.js"></script>
-		<script src="js/app/login/loginController.js"></script>
-		<script src="js/app/login/loginService.js"></script>
-		<script src="js/app/utils/utilsServ.js"></script>
+		<script src="vistas/js/jquery.js"></script>
+		<script src="vistas/js/jquery.validate.js"></script>
+		<script src="vistas/js/angular.min.js"></script>
+		<script src="vistas/js/angular-cookies.min.js"></script>
+		<script src="vistas/js/bootstrap.min.js"></script>
+		<script src="vistas/js/app/app.js"></script>
+		<script src="vistas/js/app/login/loginController.js"></script>
+		<script src="vistas/js/app/login/loginService.js"></script>
+		<script src="vistas/js/app/utils/utilsServ.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/estiloGeneral.css"></link>
-		<script src="js/app/directive/esperaDir.js"></script>
+		<script src="vistas/js/app/directive/esperaDir.js"></script>
 		<title>Ubik-T: Login</title>
 	</head>
 	<body ng-controller="loginCtrl as lc">
