Actualización de rutas

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		<script src="vistas/js/app/login/loginController.js"></script>
 		<script src="vistas/js/app/login/loginService.js"></script>
 		<script src="vistas/js/app/utils/utilsServ.js"></script>
-		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/estiloGeneral.css"></link>
+		<link rel="stylesheet" type="text/css" href="vistas/css/bootstrap.min.css">
+		<link rel="stylesheet" href="vistas/css/estiloGeneral.css"></link>
 		<script src="vistas/js/app/directive/esperaDir.js"></script>
 		<title>Ubik-T: Login</title>
 	</head>
@@ -21,7 +21,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
-					<a href="index.html"><img id="imgEnc" src="img/header.png"></a>
+					<a href="vistas/index.html"><img id="imgEnc" src="vistas/img/header.png"></a>
 				</div>
 			</div>
 			<div class="row text-center mt-5 mb-2">
@@ -38,7 +38,7 @@
 			 		<span class="form-control text-center">{{lc.mensaje}}</span>	
 				</div>
 				<div class="col-lg-12 text-center mt-1 mb-2">
-					<a id="alumno" class="w-100" href="test.html">&nbsp ¿Eres un alumno? Haz clic aqui &nbsp</a>
+					<a id="alumno" class="w-100" href="vistas/test.html">&nbsp ¿Eres un alumno? Haz clic aqui &nbsp</a>
 				</div>
 				<div class="col-lg-12 text-center mt-1 mb-2">
 					<input class="btn btn-info" id="botonsuccess" type="button" value="Ingresar" ng-click="lc.ingresa()">
